<resources>
    <string name="app_name">BeatOn</string>
    <string name="title_profile">Profile</string>
    <string name="title_feed">Feed</string>
    <string name="title_add">Add</string>

    <string name="title_activity_reg_log">RegLog</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_profile_view">ProfileView</string>
    <string name="title_activity_beat_view">BeatView</string>
    <string name="title_activity_liked_view">LikedView</string>

    <string name="tab_register">REGISTER</string>
    <string name="tab_login">LOG IN</string>

    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="to_login">Log In Now</string>
    <string name="to_register">Register Now</string>

    <string name="log_in_upper">LOG IN</string>
    <string name="login_upper">LOGIN</string>
    <string name="register_upper">REGISTER</string>
    <string name="email_upper">EMAIL</string>
    <string name="password_upper">PASSWORD</string>

    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cover">Cover</string>
    <string name="upload_beat">Upload Beat</string>


    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
</resources>